--- a/Doc/Bachelor Thesis/FormatsAndDefs.tex
+++ b/Doc/Bachelor Thesis/FormatsAndDefs.tex
@@ -26,8 +26,13 @@
 \usepackage{libertine}
 \usepackage{nameref}
 \usepackage{color}
+\usepackage{amsmath}
+\usepackage{algorithmicx}
+\usepackage{algorithm}
+\usepackage[noend]{algpseudocode}
 
 \newcommand*{\fullref}[1]{\hyperref[{#1}]{\ref*{#1} \nameref*{#1}}}
+\newcommand*{\algoref}[1]{\hyperref[{#1}]{\nameref{#1}}}
 
 % Definitions for C# code colors
 \definecolor{commentCSharpColor}{rgb}{0.3411764705,0.6509803921,0.2901960784313}
