--- a/Doc/Bachelor Thesis/FormatsAndDefs.tex
+++ b/Doc/Bachelor Thesis/FormatsAndDefs.tex
@@ -33,6 +33,7 @@
 
 \newcommand*{\fullref}[1]{\hyperref[{#1}]{\ref*{#1} \nameref*{#1}}}
 \newcommand*{\algoref}[1]{\hyperref[{#1}]{\nameref{#1}}}
+\def\hyph{-\penalty0\hskip0pt\relax}
 
 % Definitions for C# code colors
 \definecolor{commentCSharpColor}{rgb}{0.3411764705,0.6509803921,0.2901960784313}
