--- a/Doc/Bachelor Thesis/appendix.tex
+++ b/Doc/Bachelor Thesis/appendix.tex
@@ -126,177 +126,177 @@ V priloženej tabuľke je legenda pre diagramy zobrazujúce štruktúru dát ukl
 	\caption[Legenda diagramov kolekcií]{Legenda diagramov kolekcií}\label{fig:collections_legend}
 \end{figure}
 
-\newpage
-\ifthenelse {\boolean{bachelor}}
-{
-	%\section{Electronic medium}
-	\section{Ukážka celého záznamu}
-}
-{
-	%\chapter{Electronic medium}
-	\chapter{Ukážka celého záznamu}
-}
-\label{appendix:db_entry_full_example}
-V nasledujúcej ukážke je zobrazený celý záznam z databázy pre vetu ,,The president of the Czech Republic is Miloš Zeman.''. \\
-
-\begin{lstlisting}[language = json, caption={Ukážka dát kolekcie rules}, label = {code:collection_rules_data_example}]
-{
-	"_id" : ObjectId("562d5aa22a085409d0bdba1d"),
-	"originalSentence" : "The president of the Czech Republic is Milos Zeman.",
-	"note" : "President is Zeman.",
-	"createdBy" : 0,
-	"articleId" : -1,
-	"sentencesEnds" : [3],
-	"originalDependencies" : [{
-		"dependencyName" : "det",
-		"dependencies" : [{
-			"governor" : {
-				"pos" : "NN",
-				"index" : 2
-			},
-			"dependent" : {
-				"pos" : "DT",
-				"index" : 1
-			},
-			"position" : 0
-		}, {
-			"governor" : {
-				"pos" : "NNP",
-				"index" : 6
-			},
-			"dependent" : {
-				"pos" : "DT",
-				"index" : 4
-			},
-			"position" : 3
-		}]
-	}, {
-		"dependencyName" : "nsubj",
-		"dependencies" : [{
-			"governor" : {
-				"pos" : "NNP",
-				"index" : 9
-			},
-			"dependent" : {
-				"pos" : "NN",
-				"index" : 2
-			},
-			"position" : 1
-		}]
-	}, {
-		"dependencyName" : "case",
-		"dependencies" : [{
-			"governor" : {
-				"pos" : "NNP",
-				"index" : 6
-			},
-			"dependent" : {
-				"pos" : "IN",
-				"index" : 3
-			},
-			"position" : 2
-		}]
-	}, {
-		"dependencyName" : "compound",
-		"dependencies" : [{
-			"governor" : {
-				"pos" : "NNP",
-				"index" : 6
-			},
-			"dependent" : {
-				"pos" : "NNP",
-				"index" : 5
-			},
-			"position" : 4
-		}, {
-			"governor" : {
-				"pos" : "NNP",
-				"index" : 9
-			},
-			"dependent" : {
-				"pos" : "NNP",
-				"index" : 8
-			},
-			"position" : 7
-		}]
-	}, {
-		"dependencyName" : "nmod",
-		"dependencies" : [{
-			"governor" : {
-				"pos" : "NN",
-				"index" : 2
-			},
-			"dependent" : {
-				"pos" : "NNP",
-				"index" : 6
-			},
-			"position" : 5
-		}]
-	}, {
-		"dependencyName" : "cop",
-		"dependencies" : [{
-			"governor" : {
-				"pos" : "NNP",
-				"index" : 9
-			},
-			"dependent" : {
-				"pos" : "VBZ",
-				"index" : 7
-			},
-			"position" : 6
-		}]
-	}, {
-		"dependencyName" : "root",
-		"dependencies" : [{
-			"governor" : {
-				"pos" : "",
-				"index" : -1
-			},
-			"dependent" : {
-				"pos" : "NNP",
-				"index" : 9
-			},
-			"position" : 8
-		}]
-	}],
-	"noteDependencies" : [{
-		"dependencyName" : "nsubj",
-		"dependencies" : [{
-			"governor" : {
-				"pos" : "NNP",
-				"index" : 9
-			},
-			"dependent" : {
-				"pos" : "NN",
-				"index" : 2
-			},
-			"position" : 0,
-			"comparisonType" : 0
-		}, {
-			"governor" : {
-				"pos" : "NNP",
-				"index" : 9
-			},
-			"dependent" : {
-				"pos" : "NN",
-				"index" : 2
-			},
-			"position" : 2,
-			"comparisonType" : 0
-		}]
-	}, {
-		"dependencyName" : "cop",
-		"dependencies" : [{
-			"governor" : {
-				"pos" : "NNP",
-				"index" : 9
-			},
-			"dependent" : {
-				"pos" : "VBZ",
-				"index" : 7
-			},
-			"position" : 1
-		}]
-	}]
-}
-\end{lstlisting}
+%\newpage
+%\ifthenelse {\boolean{bachelor}}
+%{
+%	%\section{Electronic medium}
+%	\section{Ukážka celého záznamu}
+%}
+%{
+%	%\chapter{Electronic medium}
+%	\chapter{Ukážka celého záznamu}
+%}
+%\label{appendix:db_entry_full_example}
+%V nasledujúcej ukážke je zobrazený celý záznam z databázy pre vetu ,,The president of the Czech Republic is Miloš Zeman.''.
+%
+%\begin{lstlisting}[language = json, caption={Ukážka dát kolekcie rules}, label = {code:collection_rules_data_example}]
+%{
+%	"_id" : ObjectId("562d5aa22a085409d0bdba1d"),
+%	"originalSentence" : "The president of the Czech Republic is Milos Zeman.",
+%	"note" : "President is Zeman.",
+%	"createdBy" : 0,
+%	"articleId" : -1,
+%	"sentencesEnds" : [3],
+%	"originalDependencies" : [{
+%		"dependencyName" : "det",
+%		"dependencies" : [{
+%			"governor" : {
+%				"pos" : "NN",
+%				"index" : 2
+%			},
+%			"dependent" : {
+%				"pos" : "DT",
+%				"index" : 1
+%			},
+%			"position" : 0
+%		}, {
+%			"governor" : {
+%				"pos" : "NNP",
+%				"index" : 6
+%			},
+%			"dependent" : {
+%				"pos" : "DT",
+%				"index" : 4
+%			},
+%			"position" : 3
+%		}]
+%	}, {
+%		"dependencyName" : "nsubj",
+%		"dependencies" : [{
+%			"governor" : {
+%				"pos" : "NNP",
+%				"index" : 9
+%			},
+%			"dependent" : {
+%				"pos" : "NN",
+%				"index" : 2
+%			},
+%			"position" : 1
+%		}]
+%	}, {
+%		"dependencyName" : "case",
+%		"dependencies" : [{
+%			"governor" : {
+%				"pos" : "NNP",
+%				"index" : 6
+%			},
+%			"dependent" : {
+%				"pos" : "IN",
+%				"index" : 3
+%			},
+%			"position" : 2
+%		}]
+%	}, {
+%		"dependencyName" : "compound",
+%		"dependencies" : [{
+%			"governor" : {
+%				"pos" : "NNP",
+%				"index" : 6
+%			},
+%			"dependent" : {
+%				"pos" : "NNP",
+%				"index" : 5
+%			},
+%			"position" : 4
+%		}, {
+%			"governor" : {
+%				"pos" : "NNP",
+%				"index" : 9
+%			},
+%			"dependent" : {
+%				"pos" : "NNP",
+%				"index" : 8
+%			},
+%			"position" : 7
+%		}]
+%	}, {
+%		"dependencyName" : "nmod",
+%		"dependencies" : [{
+%			"governor" : {
+%				"pos" : "NN",
+%				"index" : 2
+%			},
+%			"dependent" : {
+%				"pos" : "NNP",
+%				"index" : 6
+%			},
+%			"position" : 5
+%		}]
+%	}, {
+%		"dependencyName" : "cop",
+%		"dependencies" : [{
+%			"governor" : {
+%				"pos" : "NNP",
+%				"index" : 9
+%			},
+%			"dependent" : {
+%				"pos" : "VBZ",
+%				"index" : 7
+%			},
+%			"position" : 6
+%		}]
+%	}, {
+%		"dependencyName" : "root",
+%		"dependencies" : [{
+%			"governor" : {
+%				"pos" : "",
+%				"index" : -1
+%			},
+%			"dependent" : {
+%				"pos" : "NNP",
+%				"index" : 9
+%			},
+%			"position" : 8
+%		}]
+%	}],
+%	"noteDependencies" : [{
+%		"dependencyName" : "nsubj",
+%		"dependencies" : [{
+%			"governor" : {
+%				"pos" : "NNP",
+%				"index" : 9
+%			},
+%			"dependent" : {
+%				"pos" : "NN",
+%				"index" : 2
+%			},
+%			"position" : 0,
+%			"comparisonType" : 0
+%		}, {
+%			"governor" : {
+%				"pos" : "NNP",
+%				"index" : 9
+%			},
+%			"dependent" : {
+%				"pos" : "NN",
+%				"index" : 2
+%			},
+%			"position" : 2,
+%			"comparisonType" : 0
+%		}]
+%	}, {
+%		"dependencyName" : "cop",
+%		"dependencies" : [{
+%			"governor" : {
+%				"pos" : "NNP",
+%				"index" : 9
+%			},
+%			"dependent" : {
+%				"pos" : "VBZ",
+%				"index" : 7
+%			},
+%			"position" : 1
+%		}]
+%	}]
+%}
+%\end{lstlisting}
