DOC - Miner changes to Design section to reflect new DB structure

--- a/Doc/Bachelor Thesis/FormatsAndDefs.tex
+++ b/Doc/Bachelor Thesis/FormatsAndDefs.tex
@@ -67,7 +67,7 @@
 %\usepackage[pdfborder={0 0 0}]{hyperref} 
 
 % red references
-\usepackage[colorlinks=true,linkcolor = blue]{hyperref}
+\usepackage[colorlinks=true,linkcolor = black, urlcolor = black, citecolor = black]{hyperref}
 
 % Colors
 \definecolor{light-gray}{gray}{0.95}
