--- a/Doc/Bachelor Thesis/main.tex
+++ b/Doc/Bachelor Thesis/main.tex
@@ -46,9 +46,9 @@
 \newcommand{\Author}{Martin Nemček}
 \newcommand{\Title}{Spracovanie učebných textov}
 \newcommand{\Supervisor}{Ing. Miroslav Blšták}
-\newcommand{\Place}{FIIT STU BA}
-\newcommand{\Year}{2015}
-\newcommand{\Month}{December }
+\newcommand{\Place}{Ústav informatiky, informačných systémov a softvérového inžinierstva, FIIT STU, Bratislava}
+\newcommand{\Year}{2016}
+\newcommand{\Month}{Máj }
 \newcommand{\FIIT}{FIIT-5212-72264}
 \newcommand{\Field}{9.2.1 Informatika}
 \newcommand{\Program}{Informatika}
@@ -75,12 +75,12 @@ pdfkeywords={key words},%
 %% Anotation
 %%
 \pagenumbering{roman}\setcounter{page}{2}
-%\input{anotation.tex}
+\input{anotation.tex}
 
 %%
 %% Declaration
 %%
-%\input{declaration.tex}
+\input{declaration.tex}
 
 %%
 %% Contents
@@ -141,12 +141,12 @@ pdfkeywords={key words},%
 %%
 %% test
 %%
-%\input{results.tex}
+\input{results.tex}
 
 %%
 %% Conclusion
 %%tex 
-%\input{conclusions.tex}
+\input{conclusions.tex}
 
 %%
 %% References
